# erpnext_nextcloud_sso

./: .eslintrc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  manage.sh  pyproject.toml
.github/helpers/: apps.json
.github/workflows/: ci.yml  linter.yml  pytest.yml
docker/: .env  Dockerfile  docker-compose.yaml
erpnext_nextcloud_sso/: hooks.py  install.py  modules.txt  oauth2_logins.py  overrides.py  property_setters.py  setup.py  userinfo.py
erpnext_nextcloud_sso/erpnext_nextcloud_sso/: userinfo.py
erpnext_nextcloud_sso/erpnext_nextcloud_sso/tests/: test_userinfo.py
erpnext_nextcloud_sso/fixtures/: property_setters.json
erpnext_nextcloud_sso/public/css/: erpnext_nextcloud_sso.css
erpnext_nextcloud_sso/public/js/: erpnext_nextcloud_sso.js  social_login_key.js
erpnext_nextcloud_sso/tests/: test_userinfo.py
frappe_marketplace/: App Data.md
