[project]
name = "erpnext_nextcloud_sso"
authors = [
    { name = "Dr. Denis Stogl", email = "dr.denis@b-robotized.com"}
]
description = "Userinfo shim to use Nextcloud OAuth2 with ERPNext v16 social login."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["requests"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/b-robotized/erpnext_nextcloud_sso"
Repository = "https://github.com/b-robotized/erpnext_nextcloud_sso.git"
"Bug Reports" = "https://github.com/b-robotized/erpnext_nextcloud_sso/issues"
